corrected gap issue on homepage

--- a/style.css
+++ b/style.css
@@ -161,6 +161,7 @@ header .nav-btn {
   row-gap: 30px;
  }
 
+ .home-posts-top,
  .home-posts-middle,
  .home-posts-bottom {
   margin-bottom: 30px;
